CSS: Fix .quick-actions alignment
refs #185

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -159,10 +159,6 @@ div.show-more {
     margin-top: .25em;
     margin-left: 6em;
   }
-
-  .quick-actions {
-    margin-bottom: .5em;
-  }
 }
 
 .content > h2:first-child,
